Lots of goodies

--- a/Logos/index.html
+++ b/Logos/index.html
@@ -79,6 +79,11 @@
 	<p class="links">Download as:&nbsp;&nbsp;<a href="./ppauLogo-website_negative_bw.svg">SVG</a>&nbsp;&nbsp;<a href="./Renders/ppauLogo-website_negative_bw.pdf">PDF</a>&nbsp;&nbsp;<a href="./Renders/ppauLogo-website_negative_bw.png">PNG</a>&nbsp;&nbsp;</p>
 </div>
 <div>
+	<img src="./Renders/ship-only_preview.jpg" alt="ship-only">
+	<p class="caption">ship-only</p>
+	<p class="links">Download as:&nbsp;&nbsp;<a href="./ship-only.svg">SVG</a>&nbsp;&nbsp;<a href="./Renders/ship-only.pdf">PDF</a>&nbsp;&nbsp;<a href="./Renders/ship-only.png">PNG</a>&nbsp;&nbsp;</p>
+</div>
+<div>
 	<img src="./Renders/ship_preview.jpg" alt="ship">
 	<p class="caption">ship</p>
 	<p class="links">Download as:&nbsp;&nbsp;<a href="./ship.svg">SVG</a>&nbsp;&nbsp;<a href="./Renders/ship.pdf">PDF</a>&nbsp;&nbsp;<a href="./Renders/ship.png">PNG</a>&nbsp;&nbsp;</p>
@@ -92,6 +97,11 @@
 	<img src="./Renders/signet_black_negative_preview.jpg" alt="signet_black_negative">
 	<p class="caption">signet_black_negative</p>
 	<p class="links">Download as:&nbsp;&nbsp;<a href="./signet_black_negative.svg">SVG</a>&nbsp;&nbsp;<a href="./Renders/signet_black_negative.pdf">PDF</a>&nbsp;&nbsp;<a href="./Renders/signet_black_negative.png">PNG</a>&nbsp;&nbsp;</p>
+</div>
+<div>
+	<img src="./Renders/signet_black_negative_on_light_blue_preview.jpg" alt="signet_black_negative_on_light_blue">
+	<p class="caption">signet_black_negative_on_light_blue</p>
+	<p class="links">Download as:&nbsp;&nbsp;<a href="./signet_black_negative_on_light_blue.svg">SVG</a>&nbsp;&nbsp;<a href="./Renders/signet_black_negative_on_light_blue.pdf">PDF</a>&nbsp;&nbsp;<a href="./Renders/signet_black_negative_on_light_blue.png">PNG</a>&nbsp;&nbsp;</p>
 </div>
 <div>
 	<img src="./Renders/signet_grey_preview.jpg" alt="signet_grey">
@@ -142,6 +152,11 @@
 	<img src="./Renders/experiments/ppauLogo-website-topic_preview.jpg" alt="ppauLogo-website-topic">
 	<p class="caption">ppauLogo-website-topic</p>
 	<p class="links">Download as:&nbsp;&nbsp;<a href="./experiments/ppauLogo-website-topic.svg">SVG</a>&nbsp;&nbsp;<a href="./Renders/experiments/ppauLogo-website-topic.pdf">PDF</a>&nbsp;&nbsp;<a href="./Renders/experiments/ppauLogo-website-topic.png">PNG</a>&nbsp;&nbsp;</p>
+</div>
+<div>
+	<img src="./Renders/experiments/Discord-emoji/tapebones_preview.jpg" alt="tapebones">
+	<p class="caption">tapebones</p>
+	<p class="links">Download as:&nbsp;&nbsp;<a href="./experiments/Discord-emoji/tapebones.svg">SVG</a>&nbsp;&nbsp;<a href="./Renders/experiments/Discord-emoji/tapebones.pdf">PDF</a>&nbsp;&nbsp;<a href="./Renders/experiments/Discord-emoji/tapebones.png">PNG</a>&nbsp;&nbsp;</p>
 </div>
 <div>
 	<img src="./Renders/states/ppauLogo-queensland_preview.jpg" alt="ppauLogo-queensland">
