--- a/index.html
+++ b/index.html
@@ -108,6 +108,10 @@
         <p class="caption"><a href="./Renders/thats-transparency/thats-transparency-auth.png" download="thats-transparency">thats-transparency</a></p>
       </div>
 <div>
+        <img src="./Renders/youtube/humour_not_found-auth_preview.jpg" alt="youtube/humour_not_found">
+        <p class="caption"><a href="./Renders/youtube/humour_not_found-auth.png" download="humour_not_found">humour_not_found</a></p>
+      </div>
+<div>
         <img src="./Renders/youtube/youtube-auth_preview.jpg" alt="youtube/youtube">
         <p class="caption"><a href="./Renders/youtube/youtube-auth.png" download="youtube">youtube</a></p>
       </div>
@@ -121,6 +125,10 @@
         <img src="./Renders/generic-flyer/dl-wave_3mmbleeds_p1-auth_preview.jpg" alt="generic-flyer/dl-wave_3mmbleeds">
         <p class="caption"><a href="./Renders/generic-flyer/dl-wave_3mmbleeds_p1-auth.png" download="dl-wave_3mmbleeds_p1">dl-wave_3mmbleeds</a></p>
 <p class="caption">Page:&nbsp;&nbsp;<a href="./Renders/generic-flyer/dl-wave_3mmbleeds_p1-auth.png" download="dl-wave_3mmbleeds_p1">1</a>&nbsp;&nbsp;<a href="./Renders/generic-flyer/dl-wave_3mmbleeds_p2-auth.png" download="dl-wave_3mmbleeds_p2">2</a>&nbsp;&nbsp;</p>      </div>
+<div>
+        <img src="./Renders/generic-flyer/dl-wave_cmykonline_p1-auth_preview.jpg" alt="generic-flyer/dl-wave_cmykonline">
+        <p class="caption"><a href="./Renders/generic-flyer/dl-wave_cmykonline_p1-auth.png" download="dl-wave_cmykonline_p1">dl-wave_cmykonline</a></p>
+<p class="caption">Page:&nbsp;&nbsp;<a href="./Renders/generic-flyer/dl-wave_cmykonline_p1-auth.png" download="dl-wave_cmykonline_p1">1</a>&nbsp;&nbsp;<a href="./Renders/generic-flyer/dl-wave_cmykonline_p2-auth.png" download="dl-wave_cmykonline_p2">2</a>&nbsp;&nbsp;</p>      </div>
 <div>
         <img src="./Renders/generic-flyer/generic-flyer_p1-auth_preview.jpg" alt="generic-flyer/generic-flyer">
         <p class="caption"><a href="./Renders/generic-flyer/generic-flyer_p1-auth.png" download="generic-flyer_p1">generic-flyer</a></p>
@@ -156,6 +164,10 @@
         <p class="caption">talk-like-a-pirate</p></a>
       </div>
 <div>
+        <a href="./Renders/SocMed/2019/this-year-voting-pirate/frame-auth.png" download="frame"><img src="./Renders/SocMed/2019/this-year-voting-pirate/frame-auth_preview.jpg" alt="SocMed/2019/this-year-voting-pirate/frame">
+        <p class="caption">frame</p></a>
+      </div>
+<div>
         <a href="./Renders/SocMed/2019/this-year-voting-pirate/this-year-voting-pirate-blue-auth.png" download="this-year-voting-pirate-blue"><img src="./Renders/SocMed/2019/this-year-voting-pirate/this-year-voting-pirate-blue-auth_preview.jpg" alt="SocMed/2019/this-year-voting-pirate/this-year-voting-pirate-blue">
         <p class="caption">this-year-voting-pirate-blue</p></a>
       </div>
@@ -168,6 +180,14 @@
         <p class="caption">MEq-is-law</p></a>
       </div>
 <div>
+        <a href="./Renders/candidate-quotes/tania-robodebt-1200x1200-auth.png" download="tania-robodebt-1200x1200"><img src="./Renders/candidate-quotes/tania-robodebt-1200x1200-auth_preview.jpg" alt="candidate-quotes/tania-robodebt-1200x1200">
+        <p class="caption">tania-robodebt-1200x1200</p></a>
+      </div>
+<div>
+        <a href="./Renders/candidate-quotes/tania-robodebt-628x1200-auth.png" download="tania-robodebt-628x1200"><img src="./Renders/candidate-quotes/tania-robodebt-628x1200-auth_preview.jpg" alt="candidate-quotes/tania-robodebt-628x1200">
+        <p class="caption">tania-robodebt-628x1200</p></a>
+      </div>
+<div>
         <a href="./Renders/cant-download-planet/cant-download-planet-fb-auth.png" download="cant-download-planet-fb"><img src="./Renders/cant-download-planet/cant-download-planet-fb-auth_preview.jpg" alt="cant-download-planet/cant-download-planet-fb">
         <p class="caption">cant-download-planet-fb</p></a>
       </div>
@@ -176,8 +196,16 @@
         <p class="caption">cant-download-planet-twitter</p></a>
       </div>
 <div>
+        <a href="./Renders/corflute-covers/patches/Auth-patch-#0082b3ae-auth.png" download="Auth-patch-#0082b3ae"><img src="./Renders/corflute-covers/patches/Auth-patch-#0082b3ae-auth_preview.jpg" alt="corflute-covers/patches/Auth-patch-#0082b3ae">
+        <p class="caption">Auth-patch-#0082b3ae</p></a>
+      </div>
+<div>
         <a href="./Renders/events/pax/2017/pax-pirata-censorship-gaming-media-society-auth.png" download="pax-pirata-censorship-gaming-media-society"><img src="./Renders/events/pax/2017/pax-pirata-censorship-gaming-media-society-auth_preview.jpg" alt="events/pax/2017/pax-pirata-censorship-gaming-media-society">
         <p class="caption">pax-pirata-censorship-gaming-media-society</p></a>
+      </div>
+<div>
+        <a href="./Renders/join-the-fight/enrol-to-vote-auth.png" download="enrol-to-vote"><img src="./Renders/join-the-fight/enrol-to-vote-auth_preview.jpg" alt="join-the-fight/enrol-to-vote">
+        <p class="caption">enrol-to-vote</p></a>
       </div>
 <div>
         <a href="./Renders/join-the-fight/jtf-basic-income-auth.png" download="jtf-basic-income"><img src="./Renders/join-the-fight/jtf-basic-income-auth_preview.jpg" alt="join-the-fight/jtf-basic-income">
@@ -194,6 +222,10 @@
 <div>
         <a href="./Renders/join-the-fight/jtf-fairer-aus-auth.png" download="jtf-fairer-aus"><img src="./Renders/join-the-fight/jtf-fairer-aus-auth_preview.jpg" alt="join-the-fight/jtf-fairer-aus">
         <p class="caption">jtf-fairer-aus</p></a>
+      </div>
+<div>
+        <a href="./Renders/join-the-fight/policy-bibliography-auth.png" download="policy-bibliography"><img src="./Renders/join-the-fight/policy-bibliography-auth_preview.jpg" alt="join-the-fight/policy-bibliography">
+        <p class="caption">policy-bibliography</p></a>
       </div>
 <div>
         <a href="./Renders/press-release-posters/security-state-makes-australia-insecure/security-state-makes-australia-insecure_p1-auth.png" download="security-state-makes-australia-insecure_p1"><img src="./Renders/press-release-posters/security-state-makes-australia-insecure/security-state-makes-australia-insecure_p1-auth_preview.jpg" alt="press-release-posters/security-state-makes-australia-insecure/security-state-makes-australia-insecure">
