Big commit with lots of things!

--- a/Logos/index.html
+++ b/Logos/index.html
@@ -154,9 +154,104 @@
 	<p class="links">Download as:&nbsp;&nbsp;<a href="./experiments/ppauLogo-website-topic.svg">SVG</a>&nbsp;&nbsp;<a href="./Renders/experiments/ppauLogo-website-topic.pdf">PDF</a>&nbsp;&nbsp;<a href="./Renders/experiments/ppauLogo-website-topic.png">PNG</a>&nbsp;&nbsp;</p>
 </div>
 <div>
+	<img src="./Renders/experiments/signet-flag_preview.jpg" alt="signet-flag">
+	<p class="caption">signet-flag</p>
+	<p class="links">Download as:&nbsp;&nbsp;<a href="./experiments/signet-flag.svg">SVG</a>&nbsp;&nbsp;<a href="./Renders/experiments/signet-flag.pdf">PDF</a>&nbsp;&nbsp;<a href="./Renders/experiments/signet-flag.png">PNG</a>&nbsp;&nbsp;</p>
+</div>
+<div>
+	<img src="./Renders/experiments/tapebones-flag_preview.jpg" alt="tapebones-flag">
+	<p class="caption">tapebones-flag</p>
+	<p class="links">Download as:&nbsp;&nbsp;<a href="./experiments/tapebones-flag.svg">SVG</a>&nbsp;&nbsp;<a href="./Renders/experiments/tapebones-flag.pdf">PDF</a>&nbsp;&nbsp;<a href="./Renders/experiments/tapebones-flag.png">PNG</a>&nbsp;&nbsp;</p>
+</div>
+<div>
 	<img src="./Renders/experiments/Discord-emoji/tapebones_preview.jpg" alt="tapebones">
 	<p class="caption">tapebones</p>
 	<p class="links">Download as:&nbsp;&nbsp;<a href="./experiments/Discord-emoji/tapebones.svg">SVG</a>&nbsp;&nbsp;<a href="./Renders/experiments/Discord-emoji/tapebones.pdf">PDF</a>&nbsp;&nbsp;<a href="./Renders/experiments/Discord-emoji/tapebones.png">PNG</a>&nbsp;&nbsp;</p>
+</div>
+<div>
+	<img src="./Renders/experiments/redesign/signet_black_negative_fixed_preview.jpg" alt="signet_black_negative_fixed">
+	<p class="caption">signet_black_negative_fixed</p>
+	<p class="links">Download as:&nbsp;&nbsp;<a href="./experiments/redesign/signet_black_negative_fixed.svg">SVG</a>&nbsp;&nbsp;<a href="./Renders/experiments/redesign/signet_black_negative_fixed.pdf">PDF</a>&nbsp;&nbsp;<a href="./Renders/experiments/redesign/signet_black_negative_fixed.png">PNG</a>&nbsp;&nbsp;</p>
+</div>
+<div>
+	<img src="./Renders/experiments/redesign/signet_black_negative_swallowtail_preview.jpg" alt="signet_black_negative_swallowtail">
+	<p class="caption">signet_black_negative_swallowtail</p>
+	<p class="links">Download as:&nbsp;&nbsp;<a href="./experiments/redesign/signet_black_negative_swallowtail.svg">SVG</a>&nbsp;&nbsp;<a href="./Renders/experiments/redesign/signet_black_negative_swallowtail.pdf">PDF</a>&nbsp;&nbsp;<a href="./Renders/experiments/redesign/signet_black_negative_swallowtail.png">PNG</a>&nbsp;&nbsp;</p>
+</div>
+<div>
+	<img src="./Renders/experiments/redesign/jost/get-on-board_preview.jpg" alt="get-on-board">
+	<p class="caption">get-on-board</p>
+	<p class="links">Download as:&nbsp;&nbsp;<a href="./experiments/redesign/jost/get-on-board.svg">SVG</a>&nbsp;&nbsp;<a href="./Renders/experiments/redesign/jost/get-on-board.pdf">PDF</a>&nbsp;&nbsp;<a href="./Renders/experiments/redesign/jost/get-on-board.png">PNG</a>&nbsp;&nbsp;</p>
+</div>
+<div>
+	<img src="./Renders/experiments/redesign/jost/heresy_preview.jpg" alt="heresy">
+	<p class="caption">heresy</p>
+	<p class="links">Download as:&nbsp;&nbsp;<a href="./experiments/redesign/jost/heresy.svg">SVG</a>&nbsp;&nbsp;<a href="./Renders/experiments/redesign/jost/heresy.pdf">PDF</a>&nbsp;&nbsp;<a href="./Renders/experiments/redesign/jost/heresy.png">PNG</a>&nbsp;&nbsp;</p>
+</div>
+<div>
+	<img src="./Renders/experiments/redesign/jost/horiz-double-stack-negative_preview.jpg" alt="horiz-double-stack-negative">
+	<p class="caption">horiz-double-stack-negative</p>
+	<p class="links">Download as:&nbsp;&nbsp;<a href="./experiments/redesign/jost/horiz-double-stack-negative.svg">SVG</a>&nbsp;&nbsp;<a href="./Renders/experiments/redesign/jost/horiz-double-stack-negative.pdf">PDF</a>&nbsp;&nbsp;<a href="./Renders/experiments/redesign/jost/horiz-double-stack-negative.png">PNG</a>&nbsp;&nbsp;</p>
+</div>
+<div>
+	<img src="./Renders/experiments/redesign/jost/horiz-double-stack-swallowtail-black_preview.jpg" alt="horiz-double-stack-swallowtail-black">
+	<p class="caption">horiz-double-stack-swallowtail-black</p>
+	<p class="links">Download as:&nbsp;&nbsp;<a href="./experiments/redesign/jost/horiz-double-stack-swallowtail-black.svg">SVG</a>&nbsp;&nbsp;<a href="./Renders/experiments/redesign/jost/horiz-double-stack-swallowtail-black.pdf">PDF</a>&nbsp;&nbsp;<a href="./Renders/experiments/redesign/jost/horiz-double-stack-swallowtail-black.png">PNG</a>&nbsp;&nbsp;</p>
+</div>
+<div>
+	<img src="./Renders/experiments/redesign/jost/horiz-double-stack-swallowtail-blue_preview.jpg" alt="horiz-double-stack-swallowtail-blue">
+	<p class="caption">horiz-double-stack-swallowtail-blue</p>
+	<p class="links">Download as:&nbsp;&nbsp;<a href="./experiments/redesign/jost/horiz-double-stack-swallowtail-blue.svg">SVG</a>&nbsp;&nbsp;<a href="./Renders/experiments/redesign/jost/horiz-double-stack-swallowtail-blue.pdf">PDF</a>&nbsp;&nbsp;<a href="./Renders/experiments/redesign/jost/horiz-double-stack-swallowtail-blue.png">PNG</a>&nbsp;&nbsp;</p>
+</div>
+<div>
+	<img src="./Renders/experiments/redesign/jost/horiz-double-stack-swallowtail_preview.jpg" alt="horiz-double-stack-swallowtail">
+	<p class="caption">horiz-double-stack-swallowtail</p>
+	<p class="links">Download as:&nbsp;&nbsp;<a href="./experiments/redesign/jost/horiz-double-stack-swallowtail.svg">SVG</a>&nbsp;&nbsp;<a href="./Renders/experiments/redesign/jost/horiz-double-stack-swallowtail.pdf">PDF</a>&nbsp;&nbsp;<a href="./Renders/experiments/redesign/jost/horiz-double-stack-swallowtail.png">PNG</a>&nbsp;&nbsp;</p>
+</div>
+<div>
+	<img src="./Renders/experiments/redesign/jost/horiz-double-stack_preview.jpg" alt="horiz-double-stack">
+	<p class="caption">horiz-double-stack</p>
+	<p class="links">Download as:&nbsp;&nbsp;<a href="./experiments/redesign/jost/horiz-double-stack.svg">SVG</a>&nbsp;&nbsp;<a href="./Renders/experiments/redesign/jost/horiz-double-stack.pdf">PDF</a>&nbsp;&nbsp;<a href="./Renders/experiments/redesign/jost/horiz-double-stack.png">PNG</a>&nbsp;&nbsp;</p>
+</div>
+<div>
+	<img src="./Renders/experiments/redesign/jost/horiz-negative_preview.jpg" alt="horiz-negative">
+	<p class="caption">horiz-negative</p>
+	<p class="links">Download as:&nbsp;&nbsp;<a href="./experiments/redesign/jost/horiz-negative.svg">SVG</a>&nbsp;&nbsp;<a href="./Renders/experiments/redesign/jost/horiz-negative.pdf">PDF</a>&nbsp;&nbsp;<a href="./Renders/experiments/redesign/jost/horiz-negative.png">PNG</a>&nbsp;&nbsp;</p>
+</div>
+<div>
+	<img src="./Renders/experiments/redesign/jost/horiz_preview.jpg" alt="horiz">
+	<p class="caption">horiz</p>
+	<p class="links">Download as:&nbsp;&nbsp;<a href="./experiments/redesign/jost/horiz.svg">SVG</a>&nbsp;&nbsp;<a href="./Renders/experiments/redesign/jost/horiz.pdf">PDF</a>&nbsp;&nbsp;<a href="./Renders/experiments/redesign/jost/horiz.png">PNG</a>&nbsp;&nbsp;</p>
+</div>
+<div>
+	<img src="./Renders/experiments/redesign/jost/jtf-raise newstart_preview.jpg" alt="jtf-raise newstart">
+	<p class="caption">jtf-raise newstart</p>
+	<p class="links">Download as:&nbsp;&nbsp;<a href="./experiments/redesign/jost/jtf-raise newstart.svg">SVG</a>&nbsp;&nbsp;<a href="./Renders/experiments/redesign/jost/jtf-raise newstart.pdf">PDF</a>&nbsp;&nbsp;<a href="./Renders/experiments/redesign/jost/jtf-raise newstart.png">PNG</a>&nbsp;&nbsp;</p>
+</div>
+<div>
+	<img src="./Renders/experiments/redesign/jost/vert-negative_preview.jpg" alt="vert-negative">
+	<p class="caption">vert-negative</p>
+	<p class="links">Download as:&nbsp;&nbsp;<a href="./experiments/redesign/jost/vert-negative.svg">SVG</a>&nbsp;&nbsp;<a href="./Renders/experiments/redesign/jost/vert-negative.pdf">PDF</a>&nbsp;&nbsp;<a href="./Renders/experiments/redesign/jost/vert-negative.png">PNG</a>&nbsp;&nbsp;</p>
+</div>
+<div>
+	<img src="./Renders/experiments/redesign/jost/vert_preview.jpg" alt="vert">
+	<p class="caption">vert</p>
+	<p class="links">Download as:&nbsp;&nbsp;<a href="./experiments/redesign/jost/vert.svg">SVG</a>&nbsp;&nbsp;<a href="./Renders/experiments/redesign/jost/vert.pdf">PDF</a>&nbsp;&nbsp;<a href="./Renders/experiments/redesign/jost/vert.png">PNG</a>&nbsp;&nbsp;</p>
+</div>
+<div>
+	<img src="./Renders/experiments/redesign/jost/walkthrough_preview.jpg" alt="walkthrough">
+	<p class="caption">walkthrough</p>
+	<p class="links">Download as:&nbsp;&nbsp;<a href="./experiments/redesign/jost/walkthrough.svg">SVG</a>&nbsp;&nbsp;<a href="./Renders/experiments/redesign/jost/walkthrough.pdf">PDF</a>&nbsp;&nbsp;<a href="./Renders/experiments/redesign/jost/walkthrough.png">PNG</a>&nbsp;&nbsp;</p>
+</div>
+<div>
+	<img src="./Renders/experiments/redesign/jost/www-negative_preview.jpg" alt="www-negative">
+	<p class="caption">www-negative</p>
+	<p class="links">Download as:&nbsp;&nbsp;<a href="./experiments/redesign/jost/www-negative.svg">SVG</a>&nbsp;&nbsp;<a href="./Renders/experiments/redesign/jost/www-negative.pdf">PDF</a>&nbsp;&nbsp;<a href="./Renders/experiments/redesign/jost/www-negative.png">PNG</a>&nbsp;&nbsp;</p>
+</div>
+<div>
+	<img src="./Renders/experiments/redesign/jost/www_preview.jpg" alt="www">
+	<p class="caption">www</p>
+	<p class="links">Download as:&nbsp;&nbsp;<a href="./experiments/redesign/jost/www.svg">SVG</a>&nbsp;&nbsp;<a href="./Renders/experiments/redesign/jost/www.pdf">PDF</a>&nbsp;&nbsp;<a href="./Renders/experiments/redesign/jost/www.png">PNG</a>&nbsp;&nbsp;</p>
 </div>
 <div>
 	<img src="./Renders/states/ppauLogo-queensland_preview.jpg" alt="ppauLogo-queensland">
