--- a/page_src.html
+++ b/page_src.html
@@ -50,6 +50,7 @@
         PPAU_ONLINES_HERE
     </div>
     <hr style="height: 1vh">
+    <p><a href="https://github.com/ppau/ppau-graphics/archive/master.zip">Click here to download the entire repository as a ZIP from GitHub.</a></p>
     <script>
 
       let dlsource = "https://abjago.net/wsgi";
