Update create_index.py to match new rendering strategy

--- a/index.html
+++ b/index.html
@@ -169,6 +169,10 @@
     <p>Click the image (or caption) to download the PNG &mdash; the correct authorisation tag is already in place!</p>
     <div id="onlinesGoHere"> <!--- No onClick for this one --->
         <div>
+        <a href="./Renders/90-pct-less-bs/90-pct-less-bs-auth.png" download="90-pct-less-bs"><img src="./Renders/90-pct-less-bs/90-pct-less-bs-auth_preview.jpg" alt="90-pct-less-bs/90-pct-less-bs">
+        <p class="caption">90-pct-less-bs</p></a>
+      </div>
+<div>
         <a href="./Renders/Pete-the-pirate/give-centrelink-the-boot/give-centrelink-the-boot-auth.png" download="give-centrelink-the-boot"><img src="./Renders/Pete-the-pirate/give-centrelink-the-boot/give-centrelink-the-boot-auth_preview.jpg" alt="Pete-the-pirate/give-centrelink-the-boot/give-centrelink-the-boot">
         <p class="caption">give-centrelink-the-boot</p></a>
       </div>
