--- a/index.html
+++ b/index.html
@@ -91,6 +91,18 @@
         <p class="caption"><a href="./Renders/jg-and-ces/trial-jg-bring-back-ces-auth.png" download="trial-jg-bring-back-ces">trial-jg-bring-back-ces</a></p>
       </div>
 <div>
+        <img src="./Renders/legalise-fanworks/legalise-cosplay-A4-bw-auth_preview.jpg" alt="legalise-fanworks/legalise-cosplay-A4-bw">
+        <p class="caption"><a href="./Renders/legalise-fanworks/legalise-cosplay-A4-bw-auth.png" download="legalise-cosplay-A4-bw">legalise-cosplay-A4-bw</a></p>
+      </div>
+<div>
+        <img src="./Renders/legalise-fanworks/legalise-fanfic-A4-bw-auth_preview.jpg" alt="legalise-fanworks/legalise-fanfic-A4-bw">
+        <p class="caption"><a href="./Renders/legalise-fanworks/legalise-fanfic-A4-bw-auth.png" download="legalise-fanfic-A4-bw">legalise-fanfic-A4-bw</a></p>
+      </div>
+<div>
+        <img src="./Renders/legalise-fanworks/legalise-fansubs-A4-bw-auth_preview.jpg" alt="legalise-fanworks/legalise-fansubs-A4-bw">
+        <p class="caption"><a href="./Renders/legalise-fanworks/legalise-fansubs-A4-bw-auth.png" download="legalise-fansubs-A4-bw">legalise-fansubs-A4-bw</a></p>
+      </div>
+<div>
         <img src="./Renders/love-your-govt/love-your-govt-auth_preview.jpg" alt="love-your-govt/love-your-govt">
         <p class="caption"><a href="./Renders/love-your-govt/love-your-govt-auth.png" download="love-your-govt">love-your-govt</a></p>
       </div>
