more legalisation, talk like a pirate, local copy of CC logos

--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
         <p class="caption"><a href="./Renders/legalise-fanworks/legalise-fansubs-A4-bw-auth.png" download="legalise-fansubs-A4-bw">legalise-fansubs-A4-bw</a></p>
       </div>
 <div>
+        <img src="./Renders/legalise-fanworks/legalise-mashups-A4-bw-auth_preview.jpg" alt="legalise-fanworks/legalise-mashups-A4-bw">
+        <p class="caption"><a href="./Renders/legalise-fanworks/legalise-mashups-A4-bw-auth.png" download="legalise-mashups-A4-bw">legalise-mashups-A4-bw</a></p>
+      </div>
+<div>
         <img src="./Renders/love-your-govt/love-your-govt-auth_preview.jpg" alt="love-your-govt/love-your-govt">
         <p class="caption"><a href="./Renders/love-your-govt/love-your-govt-auth.png" download="love-your-govt">love-your-govt</a></p>
       </div>
