--- a/Logos/logospinner.html
+++ b/Logos/logospinner.html
@@ -96,7 +96,7 @@
   
   function updateSpeed(){
     speedyboi = document.getElementById("speedRange")
-    document.getElementById("spinny").style["animation-duration"] = Math.pow(2, speedyboi.value) + "s";
+    document.getElementById("spinny").style["animation-duration"] = Math.pow(2, -speedyboi.value) + "s";
   }
   
   </script>
@@ -123,7 +123,7 @@
         <option value="australia">"Australia"</>
         <option value="website">"pirateparty.org.au"</>
     </select>
-    <input type="range" min="-2" max="3" value="2" step="0.1" class="slider" id="speedRange" onchange="updateSpeed()">
+    <input type="range" min="-3" max="2" value="-2" step="0.1" class="slider" id="speedRange" onchange="updateSpeed()">
     <label for="speedRange">Rotation Speed</label>
     <img id="spinny" src="https://pirateparty.org.au/media/identity_style_guide/SVG/ppauLogo-australia.svg">
 </body>
