many things, but especially less renderscript breakage with file modification times and better understanding of site/page roots. also new art

--- a/page_src.html
+++ b/page_src.html
@@ -31,7 +31,7 @@
     <h1>Click on an image to add a printing tag and get a PDF!</h1>
     <p class="jump"><b>Posters</b> &bullet; <a href="#pamphlets" target="_self">Pamphlets</a> &bullet; <a href="#onlines" target="_self">Pictures</a></p>
     <p>Under Australian electoral law, <a href="https://pirateparty.org.au/wiki/Authorisation_processes#Printed_materials.2C_videos_and_paid_Internet_advertisements">almost all printed political material</a> must identify the printer, as well as identifiying the authorising person. This page serves as a mechanism to keep authorisation tags current, and to easily insert printing tags.</p>
-    <p>To download a PDF with the printing tag, simply click on an image and insert the name and full street address of the printer (the legal person, not the device) when prompted.</p>
+    <p>To download a PDF with the printing tag, simply click on an image and insert the name and full street address of the printer (that's the legal person or company, not the device) when prompted.</p>
     <p>Example: <em>P. Sherman Printing, 42 Wallaby Way, Sydney NSW 2003</em></p>
     <p>If you want an image to share online, just click the caption to save it as a PNG from this page &mdash; the correct authorisation tag is already in place!</p>
     <p><a href="SITE_ROOTLogos/index.html">There are logos too!</a></p>
