Seriously ironed out the WSGI configuration

--- a/page_src.html
+++ b/page_src.html
@@ -59,7 +59,7 @@
     </div>
     <script>
 
-      let dlsource = "https://abjago.net/wsgi";
+      let dlsource = "SITE_ROOTwsgi";
 
       function clickHandler(event){
         var name = event.target.alt;
