integrate logos in jump links

--- a/Logos/logo_src.html
+++ b/Logos/logo_src.html
@@ -15,6 +15,7 @@
         #logosGoHere {text-align: center; flex-wrap: wrap; display: flex;}
         #logosGoHere > div {margin-bottom: 5vw; margin-right: 2vw;}
         .caption {font-style: italic; font-weight: bolder}
+        .jump {text-align:center}
         hr {color: #0073AE; background-color: #0073AE; border: solid;}
         a {color: #0073AE; font-weight: bold;}
         h1 {color: #fff; background-color: #0073AE; border-radius: 1vw;
@@ -25,10 +26,11 @@
   </head>
   <body>
     <h1>Logos for convenient access</h1>
+    <p class="jump"><a href="SITE_ROOTindex.html#Posters">Posters</a> &bullet; <a href="SITE_ROOTindex.html#pamphlets" target="_self">Pamphlets</a> &bullet; <a href="SITE_ROOTindex.html#onlines" target="_self">Pictures</a> &bullet; <b>Logos</b></p>
     <p><strong>Use of these logos is subject to the
         <a href="https://pirateparty.org.au/wiki/Identity_Style_Guide#Logo_usage">
             Identity Style Guide</a> on the party wiki.</strong></p>
-    <p>Items listed here but not on the party wiki are experimental (or in a few cases, not logos)</p>
+    <p>The wiki is the canonical source for logos and their usage. Items listed here but not there are either experimental, or not party logos.</p>
     <p>The ship and the tapebones may be used freely.</p>
     <p><a href="Pirate-Party-Australia.gpl">Download the colour palette (.gpl format); usable with GIMP, Inkscape, etc.</a></p>
     <p>The PNG files are rendered at 300dpi and generally with transparent backgrounds.</p>
