--- a/page_src.html
+++ b/page_src.html
@@ -31,7 +31,7 @@
   </head>
   <body>
     <h1>Click on an image to add a printing tag and get a PDF!</h1>
-    <p class="jump"><b>Posters</b> &bullet; <a href="#pamphlets" target="_self">Pamphlets</a> &bullet; <a href="#onlines" target="_self">Pictures</a></p>
+    <p class="jump"><b>Posters</b> &bullet; <a href="#pamphlets" target="_self">Pamphlets</a> &bullet; <a href="#onlines" target="_self">Pictures</a> &bullet; <a href="SITE_ROOTLogos/index.html" target="_self">Logos</a></p>
     <p>Under Australian electoral law, <a href="https://pirateparty.org.au/wiki/Authorisation_processes#Printed_materials.2C_videos_and_paid_Internet_advertisements">almost all printed political material</a> must identify the printer, as well as identifiying the authorising person. This page serves as a mechanism to keep authorisation tags current, and to easily insert printing tags.</p>
     <p>To download a PDF with the printing tag, simply click on an image and insert the name and full street address of the printer (that's the legal person or company, not the device) when prompted.</p>
     <p>Example: <em>P. Sherman Printing, 42 Wallaby Way, Sydney NSW 2003</em></p>
@@ -43,13 +43,13 @@
       PPAU_POSTERS_HERE
     </div>
     <h2 id="pamphlets">Pamphlets</h2>
-    <p class="jump"><a href="#posters" target="_self">Posters</a> &bullet; <b>Pamphlets</b> &bullet; <a href="#onlines" target="_self">Pictures</a></p>
+    <p class="jump"><a href="#posters" target="_self">Posters</a> &bullet; <b>Pamphlets</b> &bullet; <a href="#onlines" target="_self">Pictures</a> &bullet; <a href="SITE_ROOTLogos/index.html" target="_self">Logos</a></p>
     <p><em>(And other multi-page documents...)</em></p>
     <div id="pamphletsGoHere" onclick="clickHandler(event)">
         PPAU_PAMPHLETS_HERE
     </div>
     <h1 id="onlines">The below images are just for online...</h1>
-    <p class="jump"><a href="#posters" target="_self">Posters</a> &bullet; <a href="#pamphlets" target="_self">Pamphlets</a> &bullet; <b>Pictures</b></p>
+    <p class="jump"><a href="#posters" target="_self">Posters</a> &bullet; <a href="#pamphlets" target="_self">Pamphlets</a> &bullet; <b>Pictures</b> &bullet; <a href="SITE_ROOTLogos/index.html" target="_self">Logos</a></p>
     <p>Click the image (or caption) to download the PNG &mdash; the correct authorisation tag is already in place!</p>
     <div id="onlinesGoHere"> <!--- No onClick for this one --->
         PPAU_ONLINES_HERE
