fix paths in logo index, and clean up default manifest

--- a/Logos/logo_src.html
+++ b/Logos/logo_src.html
@@ -26,7 +26,7 @@
   </head>
   <body>
     <h1>Logos for convenient access</h1>
-    <p class="jump"><a href="SITE_ROOTindex.html#Posters">Posters</a> &bullet; <a href="SITE_ROOTindex.html#pamphlets" target="_self">Pamphlets</a> &bullet; <a href="SITE_ROOTindex.html#onlines" target="_self">Pictures</a> &bullet; <b>Logos</b></p>
+    <p class="jump"><a href="SITE_ROOTindex.html#posters">Posters</a> &bullet; <a href="SITE_ROOTindex.html#pamphlets" target="_self">Pamphlets</a> &bullet; <a href="SITE_ROOTindex.html#onlines" target="_self">Pictures</a> &bullet; <b>Logos</b></p>
     <p><strong>Use of these logos is subject to the
         <a href="https://pirateparty.org.au/wiki/Identity_Style_Guide#Logo_usage">
             Identity Style Guide</a> on the party wiki.</strong></p>
