allow a more distinct WSGI url to the static url

--- a/page_src.html
+++ b/page_src.html
@@ -62,7 +62,7 @@
     </div>
     <script>
 
-      let dlsource = "SITE_ROOTwsgi";
+      let dlsource = "WSGI_URL";
 
       function clickHandler(event){
         var name = event.target.alt;
